Creado template y form para recipe

--- a/templates/webapp/index.html
+++ b/templates/webapp/index.html
@@ -1,6 +1,5 @@
 {% load i18n %}
 {% load staticfiles %}
-{% load gravatar %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -61,7 +60,7 @@
                                 {% trans "Hello" %}, {{ username }}.
                             </p>
                             <a class="profile-image dropdown-toggle" data-toggle="dropdown" href="#"><img
-                                    src="{% gravatar_url user.email 150 %}"/></a>
+                                    src="{{ image.image.url }}"/></a>
                             <ul class="dropdown-menu">
                                 <li>
                                     <a href="#">Profile</a>
