--- a/templates/webapp/newaccount.html
+++ b/templates/webapp/newaccount.html
@@ -214,14 +214,8 @@
         </div>
 
         <!-- Avatar -->
-<<<<<<< HEAD
         <div class="form-group">
             <label for="id_{{ form.avatar.name }}" class="col-sm-2 control-label">Profile picture</label>
-=======
-        {% comment %}<div class="form-group">
-            <label for="id_" class="col-sm-2 control-label">Profile picture</label>
->>>>>>> develop
-
             <!-- TODO alternativas para el estilo:
                 http://gregpike.net/demos/bootstrap-file-input/demo.html
                 http://markusslima.github.io/bootstrap-filestyle/
@@ -229,7 +223,7 @@
             <div class="col-sm-3">
                 <input type="file" accept="image/*" class="form-control" name="{{ form.avatar.name }}" id="id_{{ form.avatar.name }}" value="">
             </div>
-        </div>{% endcomment %}
+        </div>
 
     </fieldset>
 
