--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -17,99 +17,72 @@
 
 <body>
 <header>
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-            <nav class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="http://getbootstrap.com/examples/starter-template/#"><img
-                        class="navbar-logo" src="{{ STATIC_URL }}webapp/image/logo_big.png"/></a>
-            </nav>
-            <nav class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active">
-                        <a href="http://getbootstrap.com/examples/starter-template/#">Home</a>
-                    </li>
-                    <li>
-                        <a href="http://getbootstrap.com/examples/starter-template/#about">Explore</a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <div class="input-group" id="fifteenMargin">
-                            <form class="navbar-form navbar-right">
+    {% block navbar %}
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">
+                        <img class="navbar-logo" src="{% static 'webapp/image/logo_big.png' %}"/>
+                    </a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#">Explore</a></li>
+                        <li class="divider-vertical"></li>
+                        <div class="input-group">
+                            <form class="navbar-form navbar-right" role="search">
                                 <input type="text" class="form-control" placeholder="Search..." name="srch-term"
                                        id="srch-term">
-
-                                <div class="input-group-btn">
+                                <span class="input-group-btn">
                                     <button class="btn btn-default" type="submit">
                                         <i class="glyphicon glyphicon-search"></i>
                                     </button>
-                                </div>
+                                </span>
                             </form>
                         </div>
-                    </li>
-                    <li class="divider-vertical"></li>
-                    {% if user.is_authenticated %}
-                        <li class="btn-group">
-                            <p>
-                                {% trans "Hello" %}, {{ username }}.
-                            </p>
-                            <a class="profile-image dropdown-toggle" data-toggle="dropdown" href="#"><img
-                                    src="{{ image.image.url }}"/></a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#">Profile</a>
-                                </li>
-                                <li>
-                                    <a href="#">My recipes</a>
-                                </li>
-                                <li>
-                                    <a href="#">Friends</a>
-                                </li>
-                                <li class="divider"></li>
-                                <li>
-                                    <a href="#">Logout</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <button type="button" class="plus btn btn-default">
-                                <span class="glyphicon glyphicon-plus"></span>Add
-                            </button>
-                        </li>
-                    {% else %}
-                        <li>
-                            <form class="navbar-form form-inline" role="form" action="/login/" method="post">
-                                {% csrf_token %}
-                                {% csrf_token %}
-                                {% if next %}
-                                    <input type="hidden" name="next" value="{{ next }}"/>
-                                {% endif %}
-                                <div class="form-group">
-                                    <label class="sr-only" for="exampleInputEmail2">Username</label>
-                                    <input type="username" name="username" class="form-control" id="username"
-                                           placeholder="Enter email" required>
-                                </div>
-                                <div class="form-group">
-                                    <label class="sr-only" for="exampleInputPassword2">Password</label>
-                                    <input type="password" name="password" class="form-control" id="password"
-                                           placeholder="Password" required>
-                                </div>
-                                <button type="submit" class="btn btn-default">
-                                    Sign in
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if user.is_authenticated %}
+                            <li><p class="navbar-text">{% trans "Hello" %}, {{ user.profile.get.display_name }}.</p>
+                            </li>
+                            <li class="dropdown">
+                                <a class="profile-image dropdown-toggle" data-toggle="dropdown" href="#">
+                                    <img src="{% if user.profile.image.url %}{{ user.profile.image.url }}
+                                    {% else %}{% static 'webapp/image/profile_pic_anon.png' %}{% endif %}"/>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Profile</a></li>
+                                    <li><a href="#">My recipes</a></li>
+                                    <li><a href="#">Friends</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Logout</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <button type="button" class="plus btn btn-default">
+                                    <span class="glyphicon glyphicon-plus"></span>Add
                                 </button>
-                            </form>
-                        </li>
-                    {% endif %}
-                </ul>
-            </nav>
-        </div>
-    </nav>
+                            </li>
+                        {% else %}
+                            <li>
+                                <button type="button" class="plus btn btn-default">Log in</button>
+                                <button type="button" class="plus btn btn-default">Sign-up</button>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    {% endblock navbar %}
     <!--/.nav-collapse -->
 </header>
 <main>
