--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -14,7 +14,7 @@
     <link href="{% static 'webapp/css/starter-template.css' %}" rel="stylesheet">
 
     {% block custom_css %}{% endblock %}
-
+</head>
 <body>
 <header>
     {% block navbar %}
@@ -36,6 +36,9 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="{% url 'main' %}">Home</a></li>
+						<li><a href="#">My Recipes</a></li>
+						<li><a href="#">Friends</a></li>
+						<li><a href="#">Recipes</a></li>
                         <li><a href="#">Explore</a></li>
                         <li class="divider-vertical"></li>
                         <div class="input-group">
