Carga el avatar en el formulario de registro mediante AJAX.
Añade un formulario oculto en la página de registro que se utiliza para enviar mediante AJAX, adjuntándole una imagen vía Drag&Drop.
El servidor responde con la url de la imagen y el id del objeto UploadedImage en la base de datos. Ambos datos se incluyen en el formulario principal en dos campos ocultos.
Cuando se envía el formulario de registro, el servidor recibe el id de la imagen previamente subida, saca el objeto UploadedImage, y asocia su ImageField con el modelo de Profile.
Adicionalmente, marca el UploadedImage como "persistente". Esto es una bandera indicando que la imagen se está utilizando, para permitir el borrado automático del resto.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -288,3 +288,15 @@ header .container {
   text-align: justify;
   text-align-last: left;
 }
+
+.drag-and-drop {
+    border: 2px dotted #0B85A1;
+    height: 100%;
+    min-height: 100px;
+    color: #92AAB0;
+    text-align: left;
+    vertical-align: middle;
+    /*padding: 10px 10px 10px 10px;*/
+    margin-bottom: 10px;
+    font-size: 175%;
+}
