--- a/templates/webapp/newaccount.html
+++ b/templates/webapp/newaccount.html
@@ -18,15 +18,104 @@
             $('.slider').slider();
         })
     </script>
+
+    <script type="text/javascript">
+        // Gracias a http://hayageek.com/drag-and-drop-file-upload-jquery/
+        // Y a http://digipiph.com/blog/submitting-multipartform-data-using-jquery-and-ajax
+        var obj = $("#drop-target");
+        obj.on('dragenter', function (e) {
+            e.stopPropagation();
+            e.preventDefault();
+            $(this).css('border', '2px solid #0B85A1');
+        });
+        obj.on('dragover', function (e) {
+            e.stopPropagation();
+            e.preventDefault();
+        });
+        obj.on('drop', function (e) {
+
+            $(this).css('border', '2px dotted #0B85A1');
+            e.preventDefault();
+            var files = e.originalEvent.dataTransfer.files;
+
+            //We need to send dropped files to Server
+            handleFileUpload(files, obj);
+        });
+
+        function handleFileUpload(files, obj) {
+            var fd = new FormData($('form')[0]);
+            fd.append('image', files[0]);
+            // Envía el csrf token con los datos de post, para que Django no lo interprete como un ataque
+            // Visto en: https://docs.djangoproject.com/en/dev/ref/contrib/csrf/#ajax
+            var csrftoken = getCookie('csrftoken');
+            $.ajaxSetup({
+                crossDomain: false, // obviates need for sameOrigin test
+                beforeSend: function (xhr, settings) {
+                    if (!csrfSafeMethod(settings.type)) {
+                        xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                    }
+                }
+            });
+            $.ajax({
+                url: '{% url 'upload' %}',
+                type: 'POST',
+                data: fd,
+                async: false,
+                cache: false,
+                contentType: false,
+                processData: false,
+                success: function (returndata) {
+                    var response = $.parseJSON(returndata);
+                    var $avatar = $("#avatar-target");
+                    $avatar.attr("src", response.url);
+                    $("#id_avatar_url").val($avatar.prop("src"));
+                    $("#id_avatar_id").val(response.id);
+                }
+            });
+        }
+
+        $(document).on('dragenter', function (e) {
+            e.stopPropagation();
+            e.preventDefault();
+        });
+        $(document).on('dragover', function (e) {
+            e.stopPropagation();
+            e.preventDefault();
+            obj.css('border', '2px dotted #0B85A1');
+        });
+        $(document).on('drop', function (e) {
+            e.stopPropagation();
+            e.preventDefault();
+        });
+        function getCookie(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie != '') {
+                var cookies = document.cookie.split(';');
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = jQuery.trim(cookies[i]);
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) == (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;
+        }
+        function csrfSafeMethod(method) {
+            // these HTTP methods do not require CSRF protection
+            return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+        }
+    </script>
 {% endblock %}
 
 
 {% block container %}
-        {% if edit %}
-            {% trans "Edit profile" as title %}
-        {% else %}
-            {% trans "Create account" as title %}
-        {% endif %}
+    {% if edit %}
+        {% trans "Edit profile" as title %}
+    {% else %}
+        {% trans "Create account" as title %}
+    {% endif %}
     <h1>{{ title }}</h1>
 
     <form role="form well well-lg" class="form-horizontal" method="post" enctype="multipart/form-data">
@@ -213,7 +302,11 @@
                 http://markusslima.github.io/bootstrap-filestyle/
                 -->
             <div class="col-sm-3">
-                <input type="file" accept="image/*" class="form-control" name="{{ form.avatar.name }}" id="id_{{ form.avatar.name }}" value="">
+                <div id="drop-target" class="drag-and-drop avatar-drop">
+                    <img id="avatar-target" class="img-rounded img-responsive" src="">
+                    <input type="hidden" id="id_{{ form.avatar_url.name }}" name="{{ form.avatar_url.name }}">
+                    <input type="hidden" id="id_{{ form.avatar_id.name }}" name="{{ form.avatar_id.name }}">
+                </div>
             </div>
         </div>
 
@@ -302,5 +395,10 @@
             <input type="submit" class="btn btn-success" value="{{ submit_text }}"/>
         </div>
     </div>
+    </form>
+
+    <form action="{% url 'upload' %}" method="post" enctype="multipart/form-data" id="avatar-form"
+          style="display: none">
+        {% csrf_token %}
     </form>
 {% endblock %}
