--- a/templates/webapp/base.html
+++ b/templates/webapp/base.html
@@ -56,7 +56,7 @@
                             </li>
                             <li class="dropdown">
                                 <a class="profile-image dropdown-toggle" data-toggle="dropdown" href="#">
-                                    <img src="{% if user.profile.get.avatar.url %}{{ user.profile.get.avatar.url }}
+                                    <img src="{% if user.profile.get.avatar %}{{ user.profile.get.avatar.url }}
                                     {% else %}{% static 'webapp/image/profile_pic_anon.png' %}{% endif %}"/>
                                 </a>
                                 <ul class="dropdown-menu">
