--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -1,143 +1,143 @@
 body {
-  padding-top: 90px;
+    padding-top: 90px;
 }
 
 .starter-template {
-  padding: 40px 15px;
-  text-align: center;
+    padding: 40px 15px;
+    text-align: center;
 }
 
 .navbar-logo {
-  width: 50px;
-  height: 41px;
+    width: 50px;
+    height: 41px;
 }
 
 .navbar .container .navbar-brand {
-  margin-left: 25px;
-  padding: 5px 10px 0 0;
+    margin-left: 25px;
+    padding: 5px 10px 0 0;
 }
 
 header .container {
-  width: 100%;
+    width: 100%;
 }
 
 .navbar-form .form-control {
-  width: 188px;
+    width: 188px;
 }
 
 .profile {
-  float: right;
-  clear: both;
-  background-color: #f8f8f8;
-  border-color: #e7e7e7;
-  width: 250px;
+    float: right;
+    clear: both;
+    background-color: #f8f8f8;
+    border-color: #e7e7e7;
+    width: 250px;
 }
 
 .navbar .profile-image {
-  padding: 5px;
+    padding: 5px;
 }
 
 .profile-image img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
 
 .plus {
-  margin: 8px;
-  color: #CC3E27;
+    margin: 8px;
+    color: #CC3E27;
 }
 
 .plus.btn.btn-default:hover, .plus.btn.btn-default:focus, .plus.btn.btn-default:active {
-  color: #fff;
-  background-color: #CC3E27;
-  border-color: #D66552;
+    color: #fff;
+    background-color: #CC3E27;
+    border-color: #D66552;
 }
 
 .divider-vertical {
-  height: 40px;
-  margin: 5px 9px;
-  border-left: 1px solid #D66552;
-  border-right: 1px solid #D66552;
+    height: 40px;
+    margin: 5px 9px;
+    border-left: 1px solid #D66552;
+    border-right: 1px solid #D66552;
 }
 
 .input-group-btn > .btn {
-  color: #CC3E27;
-  border-left-width: 0;
-  left: -2px;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    color: #CC3E27;
+    border-left-width: 0;
+    left: -2px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 
 .input-group-btn > .btn:hover {
-  color: #fff;
-  background-color: #CC3E27;
-  border-color: #D66552;
+    color: #fff;
+    background-color: #CC3E27;
+    border-color: #D66552;
 }
 
 .input-group .form-control:focus {
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  border-color: #cccccc;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    border-color: #cccccc;
 }
 
 .form {
-  margin: 0 auto;
-  float: none;
+    margin: 0 auto;
+    float: none;
 }
 
 .recipe-head {
-  border-bottom: 1px solid #CC3E27;
+    border-bottom: 1px solid #CC3E27;
 }
 
 .recipe-time {
-  float: left;
+    float: left;
 }
 
-.recipe-time span{
-  color: #CC3E27;
-  font-size: 20px;
+.recipe-time span {
+    color: #CC3E27;
+    font-size: 20px;
 }
 
 .recipe-time p {
-  display: inline;
-  font-size: 20px;
+    display: inline;
+    font-size: 20px;
 }
 
 .recipe-name {
-  color: #CC3E27;
+    color: #CC3E27;
 }
 
 .recipe-author {
-  float: right;
+    float: right;
 }
 
 .recipe-author h5 {
-  display: inline;
-  color: #CC3E27;
-  font-weight: bold;
+    display: inline;
+    color: #CC3E27;
+    font-weight: bold;
 }
 
 .recipe-image {
-  padding: 30px;
-  text-align: center;
+    padding: 30px;
+    text-align: center;
 }
 
 .recipe-image img {
-  width: 400px;
+    width: 400px;
 }
 
 .recipe-description {
-  border-top: 1px solid #e3e3e3;
-  border-bottom: 1px solid #e3e3e3;
-  margin: 20px 0;
-  padding: 10px;
-  background-color: #FFF;
+    border-top: 1px solid #e3e3e3;
+    border-bottom: 1px solid #e3e3e3;
+    margin: 20px 0;
+    padding: 10px;
+    background-color: #FFF;
 }
 
 .recipe-subhead {
@@ -145,31 +145,31 @@ header .container {
 }
 
 .recipe-ingredients {
-  width: 500px;
-  border-right: 1px solid #CC3E27;
+    width: 500px;
+    border-right: 1px solid #CC3E27;
 }
 
 .recipe-ingredients h3 {
-  color: #CC3E27;
+    color: #CC3E27;
 }
 
 .recipe-ingredients li {
-  padding: 5px;
-  list-style: none;
+    padding: 5px;
+    list-style: none;
 }
 
 .recipe-album ul {
-  padding-left: 0;
-  text-align: center;
+    padding-left: 0;
+    text-align: center;
 }
 
 .recipe-album li {
-  display: inline;
-  list-style: none;
+    display: inline;
+    list-style: none;
 }
 
 .recipe-album img {
-  width: 120px;
+    width: 120px;
 }
 
 .recipe-tags {
@@ -181,112 +181,112 @@ header .container {
 }
 
 .recipe-tag {
-  display: inline-block;
-  background-color: #FFF;
-  color: #CC3E27;
-  border: 1px solid #e3e3e3;
-  border-radius: 10%;
-  padding: 4px 5px;
-  margin: 3px;
-  text-align: center;
+    display: inline-block;
+    background-color: #FFF;
+    color: #CC3E27;
+    border: 1px solid #e3e3e3;
+    border-radius: 10%;
+    padding: 4px 5px;
+    margin: 3px;
+    text-align: center;
 }
 
 .recipe-tag:hover {
-  background-color: #CC3E27;
-  color: #FFF;
-  text-decoration: none;
-  border-color: #FFF;
+    background-color: #CC3E27;
+    color: #FFF;
+    text-decoration: none;
+    border-color: #FFF;
 }
 
 .recipe-taste h5 {
-  font-weight: bold;
-  margin-bottom: 0;
+    font-weight: bold;
+    margin-bottom: 0;
 }
 
 .recipe-taste .progress {
-  height: 10px;
+    height: 10px;
 }
 
 .recipe-taste .progress .progress-bar {
-  font-size: 10px;
-  line-height: 12px;
+    font-size: 10px;
+    line-height: 12px;
 }
 
 .recipe-info {
-  background-color: #FFF;
-  padding: 5px;
-  margin: 0 20px;
-  border-radius: 10px;
+    background-color: #FFF;
+    padding: 5px;
+    margin: 0 20px;
+    border-radius: 10px;
 }
 
 .recipe-info-data {
-  padding: 5px;
-  margin-top: 5px;
+    padding: 5px;
+    margin-top: 5px;
 }
 
 .recipe-info-data h5 {
-  display: inline;
-  font-weight: bold;
+    display: inline;
+    font-weight: bold;
 }
 
 .recipe-info-data span {
-  float: right;
+    float: right;
 }
 
 .recipe-info-data span .recipe-tag {
-  margin-right: -7px;
-  margin-top: -5px;
+    margin-right: -7px;
+    margin-top: -5px;
 }
 
-.recipe-steps-list h1{
-  color: #CC3E27;
+.recipe-steps-list h1 {
+    color: #CC3E27;
 }
 
 .recipe-step {
-  border: 1px solid #e3e3e3;
-  padding: 10px;
-  background-color: #FFF;
-  margin-bottom: 20px;
-  border-radius: 10px;
+    border: 1px solid #e3e3e3;
+    padding: 10px;
+    background-color: #FFF;
+    margin-bottom: 20px;
+    border-radius: 10px;
 }
 
 .recipe-step h5 {
-  text-align: center;
-  font-size: 20px;
-  font-weight: bold;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .recipe-step span {
-  display: block;
-  padding: 10px;
+    display: block;
+    padding: 10px;
 }
 
 .recipe-step-image {
-  text-align: center;
-  width: 100%;
+    text-align: center;
+    width: 100%;
 }
 
 .recipe-step-image img {
-  width: 400px;
-  background-color: #CC3E27;
+    width: 400px;
+    background-color: #CC3E27;
 }
 
 .recipe-note {
-  
+
 }
 
 .recipe-note h1 {
-  color: #CC3E27;
+    color: #CC3E27;
 }
 
-.recipe-note span{
-  border: 1px solid #e3e3e3;
-  padding: 15px;
-  background-color: #FFF;
-  margin-bottom: 20px;
-  border-radius: 10px;
-  text-align: justify;
-  text-align-last: left;
+.recipe-note span {
+    border: 1px solid #e3e3e3;
+    padding: 15px;
+    background-color: #FFF;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    text-align: justify;
+    text-align-last: left;
 }
 
 .drag-and-drop {
@@ -294,9 +294,59 @@ header .container {
     height: 100%;
     min-height: 100px;
     color: #92AAB0;
-    text-align: left;
+    text-align: center;
     vertical-align: middle;
     /*padding: 10px 10px 10px 10px;*/
     margin-bottom: 10px;
     font-size: 175%;
 }
+
+.main-picture {
+    height: 300px;
+}
+
+.gallery {
+    height: 150px;
+    background: #FFFFFF;
+}
+
+.gallery p {
+    text-align: center;
+    font-size: 250%;
+    color: #aeaeae
+}
+
+.gallery .drag-and-drop {
+    background-color: #f4f4f4;
+}
+
+.input-xlg {
+    height: 52px;
+    padding: 10px 16px;
+    font-size: 24px;
+    line-height: 1.33;
+    border-radius: 6px;
+}
+
+.step span {
+    font-size: 50px;
+    color: #CC3E27;
+}
+
+.step.next span {
+    font-size: 50px;
+    color: #ccc4bc;
+}
+
+.step img {
+    height: auto;
+    width: 100%;
+}
+
+.savours-help{
+    font-size: 18px;
+    font-style: italic;
+    color: #9f9f9f;
+    padding: 20px;
+}
+
