Muestra el gif desde gfycat para quitarle carga al servidor y reducir la latencia

--- a/templates/webapp/main.html
+++ b/templates/webapp/main.html
@@ -15,6 +15,6 @@
             <br>
             En construcción and stuff.
         </p>
-        <img src="{% static 'webapp/image/anim.gif' %}" style="height: 300px; width: auto"/>
+        <img src="http://giant.gfycat.com/ZanyCalmKoi.gif" style="height: 300px; width: auto"/>
     </div>
 {% endblock %}
