Creada pagina principal. Añadida vista y template sencillo como modelo inicial. Añadida clase en css para controlar que la descripcion no altere el tamaño de las tarjetas. Falta añadir links para navegacion y cargar datos de prueba para probarlo.

--- a/static/webapp/css/bootstrap.css
+++ b/static/webapp/css/bootstrap.css
@@ -13,6 +13,9 @@ html {
 body {
   margin: 0;
 }
+
+.description-recipe-main{height: 80px;text-overflow:ellipsis;overflow:hidden;}
+
 article,
 aside,
 details,
