Modificado css para que los titulos no alteren el tamaño de las tarjetas. Ya funciona de manera basica.

--- a/static/webapp/css/starter-template.css
+++ b/static/webapp/css/starter-template.css
@@ -110,6 +110,9 @@ header .container {
 }
 
 .recipe-name {
+  height: 120px;
+  text-overflow:ellipsis;
+  overflow:hidden;
   color: #CC3E27;
 }
 
