--- a/templates/webapp/main.html
+++ b/templates/webapp/main.html
@@ -1,10 +1,8 @@
 {% extends "webapp/base.html" %}
-
-{% load i18n %}
 {% load staticfiles %}
+{% load i18n %}
+
 {% block container %}
-    <!-- Start Recipe -->
-    <!-- Column Left -->
 	
 	<div class="row">
 		{% for recipe in recipes %}
@@ -14,7 +12,6 @@
           <img data-src="holder.js/300x200" alt="300x200" src="http://eladerezo.hola.com/wp-content/uploads/2008/03/Receta-de-espaguetis-con-gambas1.jpg" style="width: 300px; height: 200px;">
           <div class="caption">
             <div class="recipe-name">
-                <!-- h1>{{ receta.title }}</h1> -->
 				<h1>{{ recipe.title }}</h1>
             </div>
 			<div class="description-recipe-main">
@@ -25,7 +22,7 @@
 					<span class="glyphicon glyphicon-time"></span>
 
 					<p>
-						{{ receta.time.prep_time }}
+						{{ recipe.time.prep_time }}
 					</p>
 				</div>
 				<div class="recipe-author">
