--- a/templates/webapp/newrecipe.html
+++ b/templates/webapp/newrecipe.html
@@ -60,6 +60,41 @@
                 var response = $.parseJSON(returndata);
                 addPicture(response.url)
             });
+
+            $(".step-list").on("click", ".step-picture", function (event) {
+                var stepPicture = $(this);
+                //TODO mostrar un modal
+                var $modal = $("#modal-picture");
+                $modal.modal("show");
+                var $gallery = $modal.find(".gallery");
+                $gallery.empty();
+
+                var urls = ["http://www.cocinillas.es/wp-content/uploads/2011/05/DSC08380-1600x1200.jpg",
+                    "http://www.cocinillas.es/wp-content/uploads/2011/05/DSC08368-1600x1200.jpg",
+                    "http://www.cocinillas.es/wp-content/uploads/2011/05/DSC08369-1600x1200.jpg",
+                    "http://www.cocinillas.es/wp-content/uploads/2011/05/DSC08371-1600x1200.jpg",
+                    "http://www.cocinillas.es/wp-content/uploads/2011/05/DSC08372-1600x1200.jpg",
+                    "http://www.cocinillas.es/wp-content/uploads/2011/05/DSC08373-1600x1200.jpg"
+                ];
+
+                for (var i = 0; i < urls.length; i++) {
+                    $gallery.append('<div class="col-sm-3 gallery-item"><img class="img-rounded" src="' + urls[i] + '"></div>');
+                }
+
+                $gallery.find(".gallery-item").click(function (e) {
+                    var url = $(this).find("img").attr("src")
+
+                    var $control = stepPicture.children(".step-picture-add");
+                    var $pic = stepPicture.children("img");
+
+                    $pic.attr("src", url);
+                    $pic.show();
+                    $control.hide();
+
+                    $modal.modal("hide");
+                });
+            });
+
         });
         function addPicture(url) {
             var $gallery = $("#gallery");
@@ -143,85 +178,104 @@
 
     <span class="clearfix"></span>
 
-    <h3 class="col-lg-offset-1">Ingredients and procedure</h3>
-    <fieldset class="well col-sm-10 col-sm-offset-1 repeat" style="padding: 20px 100px">
+    <h3 class="col-lg-offset-1">How to make it</h3>
+    <fieldset class="well col-sm-10 col-sm-offset-1" style="padding: 20px 100px">
         <!-- Ingredients -->
-        <h5>Ingredients list</h5>
+        <h4>Ingredients list</h4>
 
-        <div class="form-group well repeatable-wrapper">
-            <div class="repeatable-container">
-                <!-- ingredient-item -->
-                <div class="form-group ingredient-item repeatable-row repeatable-template">
-                    <div class="col-sm-8 col-sm-offset-2">
-                        <div class="input-group">
+        <div class="repeat">
+            <div class="form-group well repeatable-wrapper">
+                <div class="repeatable-container">
+                    <!-- ingredient-item -->
+                    <div class="form-group ingredient-item repeatable-row repeatable-template">
+                        <div class="col-sm-8 col-sm-offset-2">
+                            <div class="input-group">
                             <span class="input-group-addon repeatable-move"><span
                                     class="glyphicon glyphicon-sort"></span> </span>
-                            <input type="text" class="form-control ingredient-input"
-                            {% verbatim %} name="an-input-field[{{row-count-placeholder}}]" {% endverbatim %}
-                            >
+                                <input type="text" class="form-control ingredient-input"
+                                       name="ingredient[{row-count-placeholder}]"
+                                        >
                             <span class="input-group-btn ingredient-remove">
                                 <button class="btn btn-default repeatable-remove" type="button"><span
                                         class="glyphicon glyphicon-remove"></span></button>
                             </span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!-- /ingredient-item -->
+                    <!-- /ingredient-item -->
 
-            </div>
-            <div class="form-group ingredient-item ">
-                <div class="col-sm-8 col-sm-offset-2">
-                    <span class="form-control repeatable-add">Add an ingredient…</span>
+                </div>
+                <div class="form-group ingredient-item ">
+                    <div class="col-sm-8 col-sm-offset-2">
+                        <span class="form-control repeatable-add">Add an ingredient…</span>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <h5>Step by step</h5>
+        <h4>Step by step</h4>
 
-        <div class="form-group well">
-            <div class="col-sm-12">
-                <div class="row form-group step">
+        <div class="repeat">
+            <div class="form-group well repeatable-wrapper step-list">
+                <div class="repeatable-container">
+                    <div class="repeatable-row repeatable-template">
+                        <div class="form-group step">
+                            <div class="col-sm-1">
+                                <span>{row-number-placeholder}</span>
+                            </div>
+                            <div class="col-sm-9">
+                                <textarea class="form-control input-lg"
+                                          placeholder="What is the first step?…"
+                                          rows="4"
+                                          name="step" id="id_step"
+                                        ></textarea>
+                            </div>
+                            <div class="col-sm-2 step-picture">
+                                <a class="btn btn-default step-picture-add"><span
+                                        class="glyphicon glyphicon-camera"></span></a>
+                                <img class="img-rounded"
+                                     src="" style="display: none">
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+                </div>
+                <div class="form-group step">
                     <div class="col-sm-1">
-                        <span>1</span>
+                        <span>+</span>
                     </div>
                     <div class="col-sm-9">
-                        <textarea class="form-control input-lg"
+                        <textarea class="form-control input-lg repeatable-add"
                                   placeholder="What is the first step?…"
                                   rows="4"
                                   name="step" id="id_step"
                                 ></textarea>
                     </div>
-                    <div class="col-sm-2">
-                        <img src="http://www.cocinillas.es/wp-content/uploads/2014/03/ensalada-aguacate-gambas-4-680x453.jpg">
-                    </div>
                 </div>
-                <hr>
-                <div class="row form-group step">
-                    <div class="col-sm-1">
-                        <span>2</span>
+            </div>
+        </div>
+
+        <div class="modal fade" id="modal-picture" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">Pick a picture</h4>
                     </div>
-                    <div class="col-sm-9">
-                        <textarea class="form-control input-lg"
-                                  placeholder="And the next one?…"
-                                  rows="4"
-                                  name="step" id="id_step"
-                                ></textarea>
+                    <div class="modal-body">
+                        <div class="col-sm-12">
+                            <div class="row gallery" id="gallery">
+                                <!-- Gallery item -->
+                                {% comment %}<div class="col-sm-3 gallery-item">
+                                    <img class="img-rounded"
+                                         src="http://www.cocinillas.es/wp-content/uploads/2011/05/DSC08380-1600x1200.jpg">
+                                </div>{% endcomment %}
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-sm-2">
-                        <a class="btn btn-default"><span class="glyphicon glyphicon-camera"></span></a>
-                    </div>
-                </div>
-                <hr>
-                <div class="row form-group step next">
-                    <div class="col-sm-1">
-                        <span>3</span>
-                    </div>
-                    <div class="col-sm-9">
-                        <textarea class="form-control input-lg"
-                                  placeholder="Add next step"
-                                  rows="2"
-                                  name="step" id="id_step"
-                                ></textarea>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
